[tool.poetry]
name = "re-bingo"
version = "0.1.0"
description = ""
authors = ["Muspi Merol <admin@muspimerol.site>"]
readme = "README.md"
packages = [{ include = "re_bingo" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
orjson = "^3.8.5"
strawberry-graphql = "^0.154.0"
tortoise-orm = "^0.19.2"
uvicorn = "^0.20.0"
aiomysql = "^0.1.1"
loguru = "^0.6.0"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
